* re.c (rb_reg_to_s): suppress duplicated charclass warning.   Regexp#to_s suppress extra its whole regexp options by calling   onig_new with its source, but it doesn't call rb_reg_preprocess.   Therefore its Unicode escapes (\u{XXXX}) are given as is,   and it may cause duplicated charclass warning for example   "[\u{33}]" (3 is duplicated) or "[\u{a}\u{b}]" (u is duplicated).   [ruby-core:53649] [Bug #8151]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@40063 b2dd03c8-39d4-4d8f-98ff-823fe69b080e